@@ -1,8 +1,11 @@
 Revision history for Test-EOL
 
+    - Fix misleading test failure diagnostics when only issue are
+      trailing whitespaces
+
 0.9  2010-06-16
-     - Fix warnings on very old perls (paul@city-fan.org)
-       (Closes: RT#58442)
+    - Fix warnings on very old perls (paul@city-fan.org)
+      (Closes: RT#58442)
 
 0.8  2010-06-11
     - Use binmode :raw for input/output. Solves win32 translating the
